01/07/2005
----------
1. Hungarion lang and template files translation update
   (thanks to Posz Marton, ful_s.AY.fazekas.hu)
2. enable http compression by default at login


01/06/2005 (version 2.50)
----------
1. categroized folders display in openwebmail-folder.pl
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his code)


01/05/2005
----------
1. Cool3D.Deutsch iconset update
   (thanks to Martin Bronk, martin.AT.bronk.de)


01/04/2005
----------
1. Indonesian lang and template files translation update
   (thanks to James Briggs, james.AT.ActionMessage.com)
2. Bulgarian language and template files translation minor update
   (thanks to Veselin Slavov, vess.AT.slavof.net)
3. add minor fix to openwebmail-folders.pl for fscharset
   (thanks to Hidetoshi, hchacha.AT.users.sourceforge.net for his fix)
4. new charset support for ja_JP.utf8, zh_TW.Big5.utf8, zh_CN.GB2312.utf8
5. new option --langconv to openwebmail-tool.pl
   (thanks to Hidetoshi, hchacha.AT.users.sourceforge.net for his code
    in owm-init-gen-ja.patch.gz)
ps: This is used to convert openwebmail lang/template and htmlarea files
    of specific language from one chanrset to another.
    It is useful when adding new charset support of existing language.


01/03/2005
----------
1. Deutsch lang file translation update
   (thanks to Martin Bronk, martin.AT.bronk.de)
2. Indonesian lang and template files translation update
   (thanks to James Briggs, james.AT.ActionMessage.com)
3. Slovenian language file translation update
   (thanks to Uros Sajko, copatek.AT.yahoo.com)


12/30/2004
----------
1. Finish language translation update
   (thanks to Pasi Sjoholm, pasi.sjoholm.AT.tieto-x.fi)
2. imporve the speed of mailfilter.pl by skipping zapped/verified messageids
   as earily as possible


12/28/2004
----------
1. Deutsch lang and template files translation update
   (thanks to Martin Bronk, martin.AT.bronk.de)
2. Indonesian language file translation update