@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050107
+releasedate		20050108
 
 ##############################################################################
 # host dependent configuration
