@@ -1555,6 +1555,12 @@ border=0 alt="Small icon collections"></a>
 <a href="http://sourceforge.net/projects/openwebmail/">
 <IMG src="http://sourceforge.net/sflogo.php?group_id=34552&type=1"
 width="88" height="31" border="0" alt="SourceForge Logo"></a>
+</td><td>
+&nbsp;&nbsp;
+</td><td>
+<a href="http://freshmeat.net/projects/openwebmail">
+<IMG src="http://images.freshmeat.net/img/link_button_1.gif"
+width="88" height="31" border="0" alt="Freshmeat.net Logo"></a>
 </td></tr>
 </tbody></table>
 </center>
